...
export type HOME_AMOUNT_OPTIONS = ObjectValues<typeof HOME_AMOUNT_OPTIONS>

export const defaultExpensesCategories: Category[] = [
  {
    id: uuidv4(),
    icon: '🍉',
    name: 'Groceries'
  },
  {
    id: uuidv4(),
    icon: '🍪',
    name: 'Snacks'
  },
...

export const defaultIncomesCategories: Category[] = [
  { id: uuidv4(), icon: '💼', name: 'Business' },
  {
    id: uuidv4(),
    icon: '💸',
    name: 'Salary'
  }
]

export const defaultAccountList: Category[] = [
  { id: uuidv4(), icon: '💳', name: 'Credit Card' },
  {
...
