...
    return (
      <BottomSheet
        index={0}
        ref={ref}
        snapPoints={type === 'from' ? ['25%'] : ['50%']}>
        <ScrollView
          testID="category_picker.scroll_view"
          showsVerticalScrollIndicator={false}
          style={styles.container}>
          {type === 'to' && (
            <>
              <Text
                textTransform="uppercase"
...
